syntax = "proto3";
package elys.oracle;

import "gogoproto/gogo.proto";

option go_package = "github.com/elys-network/elys/x/oracle/types";

message AssetInfo {
  string denom = 1;
  string display = 2;
  string bandTicker = 3 [    
		(gogoproto.jsontag) = "bank_ticker,omitempty",
		(gogoproto.moretags) = "yaml:\"bank_ticker\""
	  ];
  string elysTicker = 4 [    
		(gogoproto.jsontag) = "elys_ticker,omitempty",
		(gogoproto.moretags) = "yaml:\"elys_ticker\""
	  ];
  uint64 decimal = 5;
}
